# cashew_kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  Project_Design.md  a.out  run.toml  test.rs  test_elf.asm  test_elf.s
.cargo/: config.toml
Cashew Kernel Docs/: Cashew FS.md  FVM.md  Forth Compiler.md  Machine Code Monitor.md  To-Do.md
Cashew Kernel Docs/.obsidian/: community-plugins.json  workspace
Cashew Kernel Docs/Snippets/: Cashewfs.md  Memory Map.md
Cashew Kernel Docs/Specifications/: SimpleFAT.md
Cashew Kernel Docs/Specifications/ACPI/: AML.md
Cashew Kernel Docs/Specifications/Rustlang/: Async Await.md  Async_Await.md
Cashew Kernel Docs/Structures/: Ata Block Cache.md
asm/: test_elf.asm
asm/libs/: syscalls.asm  syscalls.i
build_boot/: Cargo.toml
build_boot/src/: config.rs  main.rs
initrd/boot/: boot.sh
src/: api.rs  ata.rs  colors.rs  csh.rs  data.rs  device.rs  elf.rs  fonts.rs  fuse.rs  graphics_2d.rs  lib.rs  locked.rs  logger.rs  main.rs  mem.rs  net.rs  pci.rs  pit.rs  post.rs  serial.rs  terminal.rs  time.rs  vfs.rs  vga.rs
src/api/: fs.rs  io.rs
src/arch/: acpi.rs  cmos.rs  cpu.rs  gdt.rs  idt.rs  io.rs  mod.rs  pic.rs  vmm.rs
src/csh/: casm.rs  cat.rs  create.rs  delete.rs  forth.rs  ls.rs  objdump.rs  read.rs
src/data/: hashmap.rs  physbuffer.rs  ringbuffer.rs  shift_hash.rs
src/graphics_2d/: palletes.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  ps2.rs
src/mem/: allocator.rs  frames.rs  pagetable.rs
src/net/: rtl8139.rs
src/simple_vm/: mod.rs
src/vfs/: block.rs
src/wasi/: mod.rs
tools/: gen_256.py
(+21 files in other folders)
