[workspace]
members = [
    "build_boot",
]

[package]
name = "cashew_kernel"
version = "0.2.0"
edition = "2021"

[features]
breakpoints = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

x86_64 = "0.14.7"
spin = "0.9.0"
uart_16550 = "0.2.15"
bootloader = {version = "0.10.11"}
spinning_top = "0.2.4"
conquer-once = { version = "0.3.2", default-features = false }
pic8259 = "0.10.2"

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]